--- a/MyWorkDashboard.Shared/Components/TodoList/ToDoCard.razor
+++ b/MyWorkDashboard.Shared/Components/TodoList/ToDoCard.razor
@@ -39,7 +39,7 @@
                         </MenuItem>
                         <MenuItem>
                             <Popconfirm Placement="@Placement.Bottom" Title="削除してよろしいですか" OkText="削除する" CancelText="キャンセル" OnConfirm="DeleteTask">
-                                <Button Danger Block>削除</Button>
+                                <Button Type="@ButtonType.Primary" Icon="@IconType.Outline.Delete" Danger Block>削除</Button>
                             </Popconfirm>
                         </MenuItem>
 
