--- a/MyWorkDashboard.Shared/wwwroot/mywork-color.css
+++ b/MyWorkDashboard.Shared/wwwroot/mywork-color.css
@@ -62,3 +62,8 @@
     background-color: ivory;
     opacity: 1.0;
 }
+
+/*定型タスク編集画面*/
+.template-container-color {
+/*    border: 0.5px white solid;*/
+}
