日付の移動ボタンを押したときにカレンダーの描画が更新されないときがある #24

--- a/MyWorkDashboard.Shared/Components/Header/TopMenu.razor
+++ b/MyWorkDashboard.Shared/Components/Header/TopMenu.razor
@@ -85,11 +85,13 @@
     private  async Task GoYesterday()
     {
         await ChangeDate(_dateTime.Value.AddDays(-1));
+        _datePicker.InvokeStateHasChanged();
     }
 
     private  async Task GoTommorrow()
     {
         await ChangeDate(_dateTime.Value.AddDays(1));
+        _datePicker.InvokeStateHasChanged();
     }
 
     private async Task AddNewSchedule()
